src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_By_Assigned_To_Me__c</fullName>
        <formula>OR(
  $User.Id  =  CreatedBy.Id,
  $User.Id  =   Owner:User.Id
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Assigned To Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date_Calc__c</fullName>
        <formula>ActivityDate  &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Calc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Due__c</fullName>
        <formula>ActivityDate &lt; TODAY()  &amp;&amp;  TEXT(Status)&lt;&gt; &apos;Completed&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>ActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Calls</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>Summary__c</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY_SUBTYPE</field>
            <operation>equals</operation>
            <value>Call</value>
        </filters>
        <label>My Calls</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Tasks</fullName>
        <columns>TASK.DUE_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>Summary__c</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY_SUBTYPE</field>
            <operation>equals</operation>
            <value>Task</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Created_By_Assigned_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Closed Tasks</label>
    </listViews>
    <listViews>
        <fullName>My_Current_Tasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>My Current Tasks</label>
    </listViews>
    <listViews>
        <fullName>My_Tasks_Open</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>Summary__c</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.LAST_UPDATE_DATE_ONLY</columns>
        <columns>TASK.STATUS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Past_Due__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY_SUBTYPE</field>
            <operation>equals</operation>
            <value>Task</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>My Tasks (Open)</label>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Tasks_Open</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>Summary__c</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.LAST_UPDATE_DATE_ONLY</columns>
        <columns>TASK.STATUS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Past_Due__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>ACTIVITY_SUBTYPE</field>
            <operation>equals</operation>
            <value>Task</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>My Team&apos;s Current Tasks (Open)</label>
    </listViews>
    <listViews>
        <fullName>Tasks_created_by_or_assigned_to_me</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>Summary__c</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Closed_Date__c</columns>
        <columns>TASK.LAST_UPDATE_DATE_ONLY</columns>
        <columns>TASK.STATUS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Past_Due__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY_SUBTYPE</field>
            <operation>equals</operation>
            <value>Task</value>
        </filters>
        <filters>
            <field>Created_By_Assigned_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Tasks Created By Or Assigned To Me</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>